[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.13",
  "cmake>=3.20",
  "ninja>=1.10; platform_system != 'Windows'",  # MSVC can build without ninja, but ninja is recommended
]
build-backend = "scikit_build_core.build"

[project]
name = "chomp"
version = "0.1.0"
description = "CHOMP — a modular nonlinear programming solver with SQP/IP and sparse KKT backends"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Laio O. Seman" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/lseman/chomp"
Documentation = "https://lseman.github.io/chomp"
Issues = "https://github.com/lseman/chomp/issues"

[tool.scikit-build]
# Copy pure-Python package from the "python" directory into the wheel
wheel.packages = ["python"]
# Make CMake/Ninja chatty when -C build.verbose=true is passed
logging.level = "INFO"

# (Optional) universal2 wheels on macOS, etc. Advanced options can go here.
